add prodcut create page

--- a/FirelloProject/Areas/AdminArea/Views/Shared/_AdminLayout.cshtml
+++ b/FirelloProject/Areas/AdminArea/Views/Shared/_AdminLayout.cshtml
@@ -187,6 +187,12 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" asp-controller="Product" asp-action="index" asp-area="adminarea">
+                            <i class="mdi mdi-home menu-icon"></i>
+                            <span class="menu-title">Products</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" data-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
                             <i class="mdi mdi-circle-outline menu-icon"></i>
                             <span class="menu-title">UI Elements</span>
