--- a/FirelloProject/Areas/AdminArea/Views/Product/Create.cshtml
+++ b/FirelloProject/Areas/AdminArea/Views/Product/Create.cshtml
@@ -30,12 +30,7 @@
                     </div>
                     <div class="form-group">
                         <label asp-for="CategoryId"></label>
-                        <select asp-for="CategoryId"  class="form-select" aria-label="Default select example">
-                       @foreach (var item in ViewBag.Categories)
-                            {
-                                <option value="@item.ID">@item.Name</option>
-                            }
-                            @*asp-items="ViewBag.Categories"*@
+                        <select asp-for="CategoryId" asp-items="ViewBag.Categories" class="form-select" aria-label="Default select example">
                         </select>
                     </div>
                     <button type="submit" class="btn btn-primary mr-2">Submit</button>
@@ -47,3 +42,6 @@
 
 </div>
 
+@section Scripts{
+    <partial name="_ValiditionPartial"></partial>
+}
